Фикс: пуш в дев ставит тег dev